# vayu_console

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json  render.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260716_0000_0001_baseline.py  20260717_0100_0002_data_foundation.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  deps.py  router.py
apps/api/app/api/routes/: decision.py  evidence.py  health.py  stations.py  version.py
apps/api/app/core/: __init__.py  config.py  logging.py  middleware.py
apps/api/app/data/: __init__.py
apps/api/app/data/ingest/: __init__.py  store.py
apps/api/app/data/metadata/: __init__.py
apps/api/app/data/preprocessing/: __init__.py
apps/api/app/data/sources/: __init__.py  firms.py  open_meteo.py  openaq_s3.py
apps/api/app/data/validation/: __init__.py  validators.py
apps/api/app/database/: base.py  session.py
apps/api/app/decision/: __init__.py
apps/api/app/decision/engine/: __init__.py  service.py
apps/api/app/decision/policies/: __init__.py
apps/api/app/decision/recommendations/: __init__.py  catalogue.py
apps/api/app/decision/rules/: __init__.py  rules.py
apps/api/app/decision/schemas/: __init__.py  decision.py
apps/api/app/decision/services/: __init__.py
apps/api/app/evidence/: __init__.py  base.py
apps/api/app/evidence/aggregator/: __init__.py  service.py
apps/api/app/evidence/biomass/: __init__.py  module.py
apps/api/app/evidence/industrial/: __init__.py  module.py
apps/api/app/evidence/schemas/: __init__.py  evidence.py
apps/api/app/evidence/services/: __init__.py  context_builder.py
apps/api/app/evidence/traffic/: __init__.py  module.py
apps/api/app/models/: __init__.py  common.py  fire.py  measurement.py  station.py  weather.py
apps/api/app/repositories/: __init__.py
apps/api/app/schemas/: health.py
apps/api/app/services/: health_service.py
apps/api/app/utils/: __init__.py
apps/api/scripts/: coverage_report.py  download_data.py  stress_test.py
apps/api/tests/: conftest.py  test_config.py  test_database_session.py  test_health.py  test_health_service.py  test_version.py
apps/api/tests/data/: __init__.py  test_sentinels.py
apps/api/tests/decision/: __init__.py  test_engine.py
apps/api/tests/evidence/: __init__.py  test_aggregator.py  test_coverage_gap.py  test_modules.py
apps/web/: .env.example  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  playwright.screenshots.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/console/: page.tsx
apps/web/src/app/status/: page.tsx
apps/web/src/components/: console-view.tsx  evidence-panel.tsx  recommendation-panel.tsx  scenario-bar.tsx  situation-header.tsx  station-map.tsx  status-panel.tsx  timeline.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx
apps/web/src/lib/: api.ts  env.ts  scenarios.ts  use-presentation.ts  utils.ts
apps/web/tests/: screenshots.spec.ts
apps/web/tests/e2e/: console.spec.ts  fixtures.ts
apps/web/tests/e2e/fixtures/: decision-example.json  evidence-example.json  stations.json
data/: README.md  natural_experiments.csv
docs/: architecture.md  deployment.md  development.md  phase-1-data-foundation.md
docs/api/: README.md  decision.md
docs/architecture/: README.md  decision-engine.md  evidence-engine.md
docs/demo/: demo-script.md
docs/design/: system.md
docs/research/: README.md  inference.md  scientific-limitations.md
docs/research/station_inventory/: coverage.md  station_inventory.json
infra/: README.md
scripts/: check-secrets.sh
submission/: README.md  build_presentation.py  demo-script.md  final-presentation.pptx  judge-faq.md  known-limitations.md  pitch-outline.md  presentation-content.md  scientific-methodology.md  technical-document.tex  technical-highlights.md
