[project]
name = "vayu-console-api"
version = "0.1.0"
description = "Vayu Console — urban air quality decision intelligence API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "geoalchemy2>=0.15",
    "httpx>=0.27",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ASYNC",
    "S",   # flake8-bandit
    "T20", # flake8-print
    "RUF",
]
ignore = [
    "E501", # line length is handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]    # assert is expected in tests
"scripts/*" = ["T201"]  # a CLI communicates by printing
"app/api/routes/*" = ["B008"]  # Depends()/Query() in defaults is the FastAPI idiom

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py312"]
line-length = 100
extend-exclude = "alembic/versions"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]
mypy_path = "."

[[tool.mypy.overrides]]
# defusedxml ships no type stubs; geoalchemy2's are incomplete.
module = ["alembic.*", "defusedxml.*", "geoalchemy2.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
